egonlang-core/res/examples/invalid/fn_expr_typecheck_body.eg
(): number { 1 + "100" };

// out: TypeError: mismatched types: expected type `number` but received `string`